Push from ETC Work Computer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Zachary Kingcade's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 						<div id="header" class="container">
 
 							<!-- Logo -->
-								<h1><a href="index.html" id="logo">Iconic</a></h1>
+								<h1><a href="index.html" id="logo">Zachary Kingcade's Portfolio</a></h1>
 
 							<!-- Nav -->
 								<nav id="nav">
@@ -66,43 +66,43 @@
 									<div id="content" class="col-12">
 
 										<header class="major">
-											<h2>Ipsum sed feugiat</h2>
-											<p>Pharetra vivamus feugiat cursus metus commodo.</p>
+											<h2>What would you like to look into first?</h2>
+											<p>Information about my skills and achievements are below with references lower on this page.</p>
 										</header>
 
 										<ul class="pennants">
 											<li>
-												<a href="#" class="pennant"><span class="icon solid fa-laptop"></span></a>
+												<a href="#" class="pennant"><span class="icon solid fa-desktop"></span></a>
 												<header>
-													<h3>Diam et faucibus</h3>
+													<h3>Experience</h3>
 												</header>
-												<p>Aliquet dis eu suscipit nisl nascetur commodo etiam diam. Egestas vestibulum sem.</p>
+												<p>Review my past work experience and programming accolades.</p>
 											</li>
 											<li>
 												<a href="#" class="pennant"><span class="icon solid fa-cog"></span></a>
 												<header>
-													<h3>Risus ante cras</h3>
+													<h3>Skills</h3>
 												</header>
-												<p>Condi Accumsan cubilia sed purus sed erat lorem lorem lobortis sed vestibulum.</p>
+												<p>Explore what skills I have aquired as well as portfolio projects created using those noted skills.</p>
 											</li>
 											<li>
 												<a href="#" class="pennant"><span class="icon solid fa-chart-bar"></span></a>
 												<header>
-													<h3>Libero pulvinar</h3>
+													<h3>Projects</h3>
 												</header>
-												<p>Natoque sociis tristique accumsan eu malesuada. Vulputate sagittis sed semper.</p>
+												<p>Explore portfolio projects I've created as examples of my various skills.</p>
 											</li>
 											<li>
-												<a href="#" class="pennant"><span class="icon solid fa-laptop"></span></a>
+												<a href="#" class="pennant"><span class="icon solid fa-question-circle"></span></a>
 												<header>
-													<h3>Diam et faucibus</h3>
+													<h3>Q and A</h3>
 												</header>
-												<p>Aliquet dis eu suscipit nisl nascetur commodo etiam diam. Egestas vestibulum.</p>
+												<p>Get quick answers to questions commonly asked by employers.</p>
 											</li>
 										</ul>
 
 										<footer>
-											<a href="#" class="button large">Sapien magna et feugiat</a>
+											<a href="#" class="button large">Skills and Projects Compendium</a>
 										</footer>
 
 									</div>
@@ -117,7 +117,8 @@
 
 					<!-- Featured -->
 						<section id="featured" class="container">
-							<div class="title"><span>Urna porta gravida</span></div>
+							<div class="title"><span>R
+								eferences</span></div>
 							<div class="row">
 
 								<div class="col-6 col-12-narrower">
