Added Contacts and Project Template Page

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 
 					<!-- Featured -->
 						<section id="featured" class="container">
-							<div class="title"><span>R
-								eferences</span></div>
+							<div class="title"><span>References</span></div>
 							<div class="row">
 
 								<div class="col-6 col-12-narrower">
@@ -190,7 +189,7 @@
 										<header>
 											<h2>Elit et euismod accumsan</h2>
 										</header>
-										<form method="post" action="#">
+										<form method="post" action="https://formspree.io/f/xqkjlbjz">
 											<div class="row gtr-50 gtr-uniform">
 												<div class="col-6 col-12-narrower">
 													<input type="text" name="name" id="name" placeholder="Name" />
@@ -206,8 +205,7 @@
 												</div>
 												<div class="col-12">
 													<ul class="actions">
-														<li><a href="#" class="button alt2">Send Message</a></li>
-														<li><a href="#" class="button alt">Clear Form</a></li>
+														<li></li><button type="submit" class="button alt2">Send</button></li>
 													</ul>
 												</div>
 											</div>
@@ -217,28 +215,22 @@
 								<!-- Other -->
 									<section class="col-4 col-12-narrower">
 										<header>
-											<h2>Adipiscing rhoncus</h2>
+											<h2>Contact me</h2>
 										</header>
 										<ul class="icons">
-											<li class="icon brands fa-twitter">
-												<a href="http://twitter.com/n33co">@untitled-corp</a>
-											</li>
-											<li class="icon brands fa-facebook-f">
-												<a href="#">facebook.com/untitled-corp</a>
-											</li>
 											<li class="icon brands fa-linkedin-in">
-												<a href="#">linkedin.com/untitled-corp</a>
+												<a href="#">https://www.linkedin.com/in/zach-kingcade-ab1658130/</a>
 											</li>
 											<li class="icon solid fa-envelope">
-												<a href="#">info@untitled.tld</a>
+												<a href="#">Zachkingcade@gmail.com</a>
 											</li>
 											<li class="icon solid fa-phone">
-												<span>(000) 000-0000</span>
+												<a href="tel:9402558415">(940) 255-8415</a>
 											</li>
 											<li class="icon solid fa-home">
 												<span>
-													1234 Fictional Road #789<br />
-													Nashville, TN 00000<br />
+													4013 Taft Blvd<br />
+													Wichita Falls, TX 76308<br />
 													United States
 												</span>
 											</li>
@@ -253,7 +245,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Zachary Kingcade. All rights reserved.
 				</div>
 
 		</div>
