--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Zachary Kingcade's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 						<div id="header" class="container">
 
 							<!-- Logo -->
-								<h1><a href="index.html" id="logo">Iconic</a></h1>
+								<h1><a href="index.html" id="logo">Zachary Kingcade's Portfolio</a></h1>
 
 							<!-- Nav -->
 								<nav id="nav">
@@ -64,8 +64,8 @@
 
 							<!-- Main Heading -->
 								<div class="title-heading">
-									<h2>Left Sidebar</h2>
-									<p>Maecenas luctus lectus at sapien</p>
+									<h2>Project Name</h2>
+									<p>SubName</p>
 								</div>
 
 							<!-- Main Content -->
@@ -76,7 +76,7 @@
 											<div id="sidebar" class="col-4 col-12-narrower">
 												<section class="section-padding">
 													<header>
-														<h2>Aenean metus iaculis</h2>
+														<h2>Skills used in this project</h2>
 													</header>
 													<p>Praesent semper mod quis eget. Etiam eu ante risus. Aliquam erat volutpat. Aliquam lectus sit amet pulvinar. Pellentesque viverra vulputate enim.</p>
 													<ul class="links">
@@ -84,24 +84,27 @@
 														<li><a href="#">Ornare in hendrerit in lectus</a></li>
 														<li><a href="#">Consequat etiam lorem phasellus</a></li>
 														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
 													</ul>
 													<footer>
-														<a href="#" class="button small alt2">Learn More</a>
+														<a href="#" class="button small alt2">Skills Search Page</a>
 													</footer>
 												</section>
 
 												<section>
 													<header>
-														<h2>Integer gravida</h2>
+														<h2>Similar Projects</h2>
 													</header>
 													<ul class="links">
 														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
 														<li><a href="#">Ornare in hendrerit in lectus</a></li>
-														<li><a href="#">Semper mod quis eget mi dolore</a></li>
-														<li><a href="#">Quam turpis feugiat sit dolor</a></li>
-														<li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-														<li><a href="#">Consequat etiam lorem phasellus</a></li>
-														<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
 													</ul>
 													<footer>
 														<a href="#" class="button small alt2">Learn More</a>
@@ -139,70 +142,62 @@
 					<!-- Footer -->
 						<div id="footer" class="container">
 
-							<div class="title"><span>Amet dictum mattis</span></div>
+							<div class="title"><span>Contact Me</span></div>
 
 							<div class="row">
 
 								<!-- Form -->
-									<section class="col-8 col-12-narrower">
-										<header>
-											<h2>Elit et euismod accumsan</h2>
-										</header>
-										<form method="post" action="#">
-											<div class="row gtr-50 gtr-uniform">
-												<div class="col-6 col-12-narrower">
-													<input type="text" name="name" id="name" placeholder="Name" />
-												</div>
-												<div class="col-6 col-12-narrower">
-													<input type="text" name="email" id="email" placeholder="Email" />
-												</div>
-												<div class="col-12">
-													<input type="text" name="subject" id="subject" placeholder="Subject" />
-												</div>
-												<div class="col-12">
-													<textarea name="message" id="message" placeholder="Message"></textarea>
-												</div>
-												<div class="col-12">
-													<ul class="actions">
-														<li><a href="#" class="button alt2">Send Message</a></li>
-														<li><a href="#" class="button alt">Clear Form</a></li>
-													</ul>
-												</div>
+								<section class="col-8 col-12-narrower">
+									<header>
+										<h2>Send me a message about this project</h2>
+									</header>
+									<form method="post" action="https://formspree.io/f/xqkjlbjz">
+										<div class="row gtr-50 gtr-uniform">
+											<div class="col-6 col-12-narrower">
+												<input type="text" name="name" id="name" placeholder="Name" />
 											</div>
-										</form>
-									</section>
+											<div class="col-6 col-12-narrower">
+												<input type="text" name="email" id="email" placeholder="Email" />
+											</div>
+											<div class="col-12">
+												<input type="text" name="subject" id="subject" placeholder="Subject" />
+											</div>
+											<div class="col-12">
+												<textarea name="message" id="message" placeholder="Message"></textarea>
+											</div>
+											<div class="col-12">
+												<ul class="actions">
+													<li></li><button type="submit" class="button alt2">Send</button></li>
+												</ul>
+											</div>
+										</div>
+									</form>
+								</section>
 
-								<!-- Other -->
-									<section class="col-4 col-12-narrower">
-										<header>
-											<h2>Adipiscing rhoncus</h2>
-										</header>
-										<ul class="icons">
-											<li class="icon brands fa-twitter">
-												<a href="http://twitter.com/n33co">@untitled-corp</a>
-											</li>
-											<li class="icon brands fa-facebook-f">
-												<a href="#">facebook.com/untitled-corp</a>
-											</li>
-											<li class="icon brands fa-linkedin-in">
-												<a href="#">linkedin.com/untitled-corp</a>
-											</li>
-											<li class="icon solid fa-envelope">
-												<a href="#">info@untitled.tld</a>
-											</li>
-											<li class="icon solid fa-phone">
-												<span>(000) 000-0000</span>
-											</li>
-											<li class="icon solid fa-home">
-												<span>
-													1234 Fictional Road #789<br />
-													Nashville, TN 00000<br />
-													United States
-												</span>
-											</li>
-										</ul>
-									</section>
-
+							<!-- Other -->
+								<section class="col-4 col-12-narrower">
+									<header>
+										<h2>Contacts</h2>
+									</header>
+									<ul class="icons">
+										<li class="icon brands fa-linkedin-in">
+											<a href="#">https://www.linkedin.com/in/zach-kingcade-ab1658130/</a>
+										</li>
+										<li class="icon solid fa-envelope">
+											<a href="#">Zachkingcade@gmail.com</a>
+										</li>
+										<li class="icon solid fa-phone">
+											<a href="tel:9402558415">(940) 255-8415</a>
+										</li>
+										<li class="icon solid fa-home">
+											<span>
+												4013 Taft Blvd<br />
+												Wichita Falls, TX 76308<br />
+												United States
+											</span>
+										</li>
+									</ul>
+								</section>
 							</div>
 
 						</div>
